# voice-ai

./: .envrc-example  .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: Reference.md
vertexcover_assignment/: main.py
vertexcover_assignment/voiceai/: __init__.py  listener.py  llm.py  stt.py  voiceai.py
